# stocks-telegram-bot

./: LICENSE  README.md  pyproject.toml
bot/: config.py  dump.rdb  main.py
bot/config/: settings.py
bot/handlers/commands/: join_handler.py  quit_handler.py  start_handler.py
bot/jobs/: alert.py
